Nautilus "New Tab" crash in nautilus_window_open_location_full()
Steps to reproduce
CTRL-T or using the menu button to create a new TAB
Reproducible in:
Arch Linux, Gnome 3.32 Nautilus 3.32.0-73876bdc
I get:
$ nautilus
Initializing nautilus-dropbox 2019.01.31
None
**
ERROR:../nautilus/src/nautilus-window.c:598:nautilus_window_open_location_full: assertion failed: (!(flags & NAUTILUS_WINDOW_OPEN_FLAG_NEW_WINDOW))
Aborted (core dumped)