window: Don’t mix and match enum types

Using NautilusNewTabPosition as NautilusWindowOpenFlags can result in a
failed assertion when the value is equal to 1
(NAUTILUS_WINDOW_OPEN_FLAG_NEW_WINDOW/NAUTILUS_NEW_TAB_POSITION_END).
Additionally, nautilus_window_open_location_full() checks the new tab
position, so it is simply pointless to do that beforehand.

Fixes https://gitlab.gnome.org/GNOME/nautilus/issues/953